--- a/desktop.ini
+++ b/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Jellyfish.jpg=@%systemroot%\system32\SampleRes.dll,-104
 Chrysanthemum.jpg=@%systemroot%\system32\SampleRes.dll,-101
+Hydrangeas.jpg=@%systemroot%\system32\SampleRes.dll,-103
